--- a/ArcsSystem/templates/base.html
+++ b/ArcsSystem/templates/base.html
@@ -10,19 +10,17 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 		<meta name="Description" content="{% trans "Medborgarforskning.se - The Swedish portal for citizen science." %}">
 		<!-- TODO Insert django tag for additional page metadata fields -->
-
 		<script src="https://code.jquery.com/jquery-3.5.1.min.js" type="text/javascript"></script>
 		<script src="{% static 'scripts/base.js' %}" type="text/javascript"></script>
-		<link rel="shortcut icon" type="image/png" href="{% static 'favicon.ico' %}"/>
+	  <link rel="shortcut icon" type="image/png" href="{% static 'favicon.ico' %}"/>
 		<!-- TODO Insert django tag for additional scripts for the page-->
 		<!-- Bootstrap CSS -->
-    	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 		<link href="{% static 'css/base.css' %}" rel="stylesheet">
 		<link href="https://fonts.googleapis.com/css?family=Lato|Playfair+Display&display=swap" rel="stylesheet" /> <!--TODO change to serve locally as it does not support integrity hash-->
-
-		<title>{% block head_title %}Medborgarforskning.se{% endblock %}</title> <!-- TODO replace "Medborgarforskning.se" with django template for the page title -->
+		<title>{% block head_title %}Medborgarforskning.se{% endblock head_title %}</title> <!-- TODO replace "Medborgarforskning.se" with django template for the page title -->
     {% block extra_head %}
-    {% endblock %}
+    {% endblock extra_head %}
 	</head>
 	<!-- open body of page -->
 	<body>
@@ -131,9 +129,17 @@
 				{% include "nav_main.html" %}
 			</div>
 		</div>
-
 		<!--content-->
-		<hr>
+		{% block body %}
+		<main id="content">{# Contents of Main are for the main target of the page. #}
+			{% block content %}
+			{% endblock content %}
+		</main>
+		{% endblock body %}
+		<!-- allauth base.html -->
+		{% block extra_body %}
+		{% endblock %}
+		<!-- End allauth base.html -->
 		<!--Footer -->
 		<div class="container-fluid p-0">
 			<div class="custom-container h">
