--- a/ArcsSystem/templates/staticpages/static_variant2.html
+++ b/ArcsSystem/templates/staticpages/static_variant2.html
@@ -39,7 +39,7 @@
                     <div class="accordion ">
                       <div class="accordion__item">
                         <div class="accordion__item__header" >
-                         <p class="home-page-buttons bold"> THEME 1</p>
+                         <p class="home-page-buttons"> THEME 1</p>
                         </div>
 
                         <div class="accordion__item__content">
@@ -48,7 +48,7 @@
                       </div>
                 	        <div class="accordion__item">
                         <div class="accordion__item__header">
-                            <p class="home-page-buttons bold"> THEME 2</p>
+                            <p class="home-page-buttons"> THEME 2</p>
                         </div>
 
                         <div class="accordion__item__content">
@@ -57,7 +57,7 @@
                       </div>
                 	        <div class="accordion__item">
                         <div class="accordion__item__header">
-                            <p class="home-page-buttons bold"> THEME 3</p>
+                            <p class="home-page-buttons"> THEME 3</p>
                         </div>
 
                         <div class="accordion__item__content">
